fixed itch display on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -283,7 +283,8 @@ h3 {
   color: #666;
   /* max-width: 60rem; */
   line-height: 1.7;
-  text-align: start;
+  text-align: center;
+  padding-bottom: 1em;
 }
 
 .bio-itch a {
